WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303102
REGRESSSION(
303504@main
): Broke Asan builds
https://bugs.webkit.org/show_bug.cgi?id=303102
Summary
REGRESSSION(303504@main): Broke Asan builds
Jean Haberer
Reported
2025-11-25 09:21:38 PST
+++ This bug was initially created as a clone of
Bug #303098
+++ REGRESSSION(
303504@main
): Broke Asan builds.
Attachments
Add attachment
proposed patch, testcase, etc.
Jean Haberer
Comment 1
2025-11-25 09:27:58 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54450
Jean Haberer
Comment 2
2025-11-25 09:34:12 PST
<
rdar://problem/165404580
>
EWS
Comment 3
2025-11-25 11:01:37 PST
Committed
303548@main
(792a0f6eb36c): <
https://commits.webkit.org/303548@main
> Reviewed commits have been landed. Closing PR #54450 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug