REGRESSSION(303504@main): Broke Asan builds https://bugs.webkit.org/show_bug.cgi?id=303102 rdar://problem/165404580

Reviewed by Etienne Segonzac.

Fix unified-sources issue

* Source/WebCore/dom/DocumentMediaElement.cpp:

Canonical link: https://commits.webkit.org/303548@main